Iteration on home page pitch

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Praxis Efficax"
-description: "Effective practices for digital businesses."
+description: "Become an effective product-centric organization."
 baseurl: ''
 url: ''
 # google_analytics: 'UA-XXXXXX-X'
